$Id$

1.4.3 TBD

* added graph zooming.  zooming happens in-place (no separate window).
   drag to zoom.  right-click to revert the graph.
* added mouseovers to graph that display time under the cursor.
* optionally specify heartbeat, step, and resolution per host/service.
* clean up insert.pl in preparation for additional processing modes and
   performance data sources.
* fix to javascript to display hosts and services when specified via CGI
   even if they do not appear in the host and service menus.
* fixed bug in handling of backslashes in service and database names.

1.4.2 2010-03-16

* new configuration options (see nagiosgraph.conf for details):
     colormax (optional)
     colormin (optional)
     language (optional)
     showprocessingtime (optional)
     default_geometry (optional)
     cgilogfile (optional)
     authzmethod (optional)
* added access control.  there are two ways to define access controls.  the
   default is to use the access control built in to nagios.  this works for
   nagios 3 and perhaps for older nagios releases.  the other way is to use
   an access control file specific to nagiosgraph.
* added i18n.  this is a very basic, no-dependencies implementation.  the
   intent is to be completely self contained, add minimal overhead, and not
   break existing installations.  error messages are not translated.  the
   language is detected from the HTTP_ACCEPT_LANGUAGE variable.  this can
   be overridden by explicit cgi argument.  language can be forced by
   specifying it in the nagiosgraph configuration file.
* added labels file.  labels can be specified individually via cgi arguments
   or via configuration files for specific combinations of host/service/data.
   labels can be overridden for individual languages, independenly of i18n.
   labels in nagiosgraph.conf are now ignored.  move them to the labels file.
* recognize relative paths for configuration filenames.  prepend the config
   dir when relative paths are specified.