@@ -135,17 +135,28 @@ colors = D05050,D08050,D0D050,50D050,50D0D0,5050D0,D050D0,505050
 # Default line style (LINE1, LINE2, LINE3, AREA, TICK); see rrdgraph_graph
 plotas = LINE2
 
-# Line styles for specific data sets.  Comma-separated list of data source
-# names.  Any source with a name assigned to plotasX will get line style X.
+# Line styles for specific data.  Comma-separated list of data source names.
+# Any source with a name assigned to plotasX will get line style X.
 plotasLINE1 = avg5min,avg15min
 plotasLINE2 = 
 plotasLINE3 =
-plotasAREA =
+plotasAREA = idle,system,user,nice
 plotasTICK = 
 
-# Specify line formats per data source (ds-name,linestyle,color).  For example,
-# this plots every data source called 'crit' as a thin red line:
+# Data sources that should be stacked.  Comma-separated list of data source
+# names.  Any source in this list will be given the STACK attribute.
+stack = system,user,nice
+
+# Data sources whose value should be negated.  Comma-separated list of names.
+#negate = byte-received,drop-received,error-received,multi-received,packet-received
+
+# Specify line formats per data source.  This is a semicolon-separated list of
+# comma-separated lists.  Each comma-separated list contains:
+#   ds-name,linestyle[,color][,STACK]
+# For example, this plots every data source called 'crit' as a thin red line:
 #lineformat = crit,LINE1,D05050
+# This stacks nice and idle onto whatever data source comes before them:
+#lineformat = system,AREA,FFAAAA;nice,AREA,AAAAFF,STACK;idle,AREA,AAFFAA,STACK
 lineformat = warn,LINE1,D0D050;crit,LINE1,D05050;losswarn,LINE1,D0D050;losscrit,LINE1,D05050;rtawarn,LINE1,D0D050;rtacrit,LINE1,D05050
 
 # Graphs to show in host-service page (day, week, month, quarter, year)
@@ -210,9 +221,6 @@ minimums = APCUPSD,Mem: free,Mem: swap
 # will include maximum/minimum values as well.
 withmaximums = PING
 withminimums = PING
-
-# Data sources whose value should be negated.  Comma-separated list of names.
-#negate = byte-received,drop-received,error-received,multi-received,packet-received
 
 # Scaling parameters, see the rrdgraph documentation for use
 # Separate multiple services to add the -A option to by commas
